<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="SearchVM"
            type="jp.co.yumemi.android.code_check.viewmodels.RepoSearchViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.activities.TopActivity">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/searchBar"
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"
            android:layout_margin="12dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="8dp"
            app:layout_constraintBottom_toTopOf="@id/recyclerView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/searchInputLayout"
                style="@style/TextInputLayoutNoBorder"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:importantForAutofill="no"
                app:endIconMode="clear_text"
                app:endIconTint="@android:color/darker_gray"
                app:hintTextColor="@android:color/darker_gray"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:startIconDrawable="@android:drawable/ic_menu_search"
                app:startIconTint="@android:color/darker_gray">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/searchInputText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:hint="@string/searchInputText_hint"
                    android:imeOptions="actionSearch"
                    android:inputType="text"
                    android:textSize="14sp"
                    android:textStyle="bold"/>

            </com.google.android.material.textfield.TextInputLayout>

        </com.google.android.material.card.MaterialCardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/searchBar" />

        <include
            android:id="@+id/lytLoading"
            layout="@layout/layout_loading_screen"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>